ci: Fix code scanning alerts: Unpinned tag for a non-immutable Action in workflow

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -38,7 +38,7 @@ jobs:
         pytest --cov --cov-report=xml --junitxml=junit.xml
 
     - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v5
+      uses: codecov/codecov-action@13ce06bfc6bbe3ecf90edbbf1bc32fe5978ca1d3
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
         fail_ci_if_error: false
@@ -46,6 +46,6 @@ jobs:
 
     - name: Upload test results to Codecov
       if: ${{ !cancelled() }}
-      uses: codecov/test-results-action@v1
+      uses: codecov/test-results-action@4e79e65778be1cecd5df25e14af1eafb6df80ea9
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
